--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&family=Josefin+Sans:ital,wght@1,700&family=Red+Hat+Display:wght@500&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Silkscreen:wght@400;700&display=swap');
+
+.heading {
+  font-family: 'Arvo', sans-serif;
+  font-weight: 500;
+}
